# quickpool

./: .gitignore  .zenodo.json  CMakeLists.txt  README.md  align.hpp  aligned_atomic.hpp  benchmark.cpp  mempool.hpp  quickpool.hpp  test.cpp  tests.cpp  tpool.hpp
.github/: actions.yml
.github/workflows/: .codecov.yml  main.yml
count/: quickpool.hpp
docs/: Doxyfile  DoxygenLayout.xml  annotated.html  benchmark_8cpp_source.html  classes.html  classquickpool_1_1ThreadPool-members.html  classquickpool_1_1ThreadPool.html  classquickpool_1_1TodoList-members.html  classquickpool_1_1TodoList.html  classquickpool_1_1detail_1_1RingBuffer-members.html  classquickpool_1_1detail_1_1RingBuffer.html  classquickpool_1_1detail_1_1TaskManager-members.html  classquickpool_1_1detail_1_1TaskManager.html  classquickpool_1_1detail_1_1TaskQueue-members.html  classquickpool_1_1detail_1_1TaskQueue.html  classquickpool_1_1sched_1_1RingBuffer-members.html  classquickpool_1_1sched_1_1RingBuffer.html  classquickpool_1_1sched_1_1TaskManager-members.html  classquickpool_1_1sched_1_1TaskManager.html  classquickpool_1_1sched_1_1TaskQueue-members.html  classquickpool_1_1sched_1_1TaskQueue.html  classtpool_1_1FinishLine-members.html  classtpool_1_1FinishLine.html  classtpool_1_1ThreadPool-members.html  classtpool_1_1ThreadPool.html  classtpool_1_1TodoList-members.html  classtpool_1_1TodoList.html  classtpool_1_1detail_1_1RingBuffer-members.html  classtpool_1_1detail_1_1RingBuffer.html  classtpool_1_1detail_1_1TaskQueue-members.html  classtpool_1_1detail_1_1TaskQueue.html  files.html  functions.html  functions_func.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  (+53 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  namespaces_0.js  pages_0.js  searchdata.js
include/: FinishLine.hpp  Static.hpp  TaskManager.hpp  ThreadPool.hpp
